cirros/single/policies/demo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nginx1-to-nginx2
spec:
  podSelector:
    matchLabels:
      app: nginx1
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: nginx2
